// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIndicator should render as open 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin-right: 4px;
  background-color: #00E8A4;
}

.c2 {
  text-transform: capitalize;
  font-size: 12px;
  font-weight: 400;
  color: #757575;
}

<StatusIndicator
  isOpen={true}
>
  <Wrapper>
    <div
      className="c0"
    >
      <Dot
        isOpen={true}
      >
        <span
          className="c1"
        />
      </Dot>
      <GenericLabel>
        <span
          className="c2"
        >
          open now
        </span>
      </GenericLabel>
    </div>
  </Wrapper>
</StatusIndicator>
`;

exports[`StatusIndicator should render without failing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  margin-right: 4px;
  background-color: #FF3548;
}

.c2 {
  text-transform: capitalize;
  font-size: 12px;
  font-weight: 400;
  color: #757575;
}

<StatusIndicator>
  <Wrapper>
    <div
      className="c0"
    >
      <Dot>
        <span
          className="c1"
        />
      </Dot>
      <GenericLabel>
        <span
          className="c2"
        >
          closed
        </span>
      </GenericLabel>
    </div>
  </Wrapper>
</StatusIndicator>
`;
